Prevent logo from moving on top of search bar on small screens

--- a/search.html
+++ b/search.html
@@ -104,7 +104,7 @@
                 <img src="./images/hound_white.png" height="36" alt="" />
             </a>
             <form class="d-flex me-auto">
-                <input id="searchBox" class="form-control me-2" name="item" type="text"
+                <input id="searchBox" class="form-control me-2 searchBoxSearchPage" name="item" type="text"
                     placeholder="Search flyers or items" aria-label="Search" />
                 <button id="searchButton" class="btn btn-success-light" type="button">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white"
