Make Brand within the popups appear similar to the other fields

--- a/search.html
+++ b/search.html
@@ -74,11 +74,11 @@
                         <h4 class="d-inline">Deal: <span class="card-deal"></span></h4>
                     </div>
                     <div class="my-2">
-                        <h4 class="d-inline">Price: <span class="card-price"></span>
+                        <h4 class="d-inline">Price: $<span class="card-price"></span>
                         </h4>
                     </div>
                     <div>
-                        <h4 class="d-inline">Brand: </h4><span class="card-brand"></span>
+                        <h4 class="d-inline">Brand: <span class="card-brand"></span></h4>
 
                     </div>
                     <div class="my-2">
