Fix "no deals" notification appearing at bottom

--- a/search.html
+++ b/search.html
@@ -376,7 +376,7 @@
     </div>
     <!-- </div> -->
 
-    <div class="d-flex flex-lg-row mainContainer">
+    <div class="d-flex flex-lg-row mainContainer" id="deals-container">
         <div class="container">
             <div id="deals-go-here" class="row row-cols-auto mt-5 justify-content-center"></div>
         </div>
