Adjust padding on "About Us" and "Get Started" buttons & fix alignment of search filter bar checkboxes

--- a/main.html
+++ b/main.html
@@ -192,7 +192,7 @@
             <p class="lead mb-4 text-white">
                 Save time and money with our easy and simple deal hunting companion.
             </p>
-            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <div class="d-grid gap-2 px-4 d-sm-flex justify-content-sm-center">
                 <a class="btn btn-light btn-lg px-4" href="./aboutus.html">About Us</a>
             </div>
         </div>
