--- a/search.html
+++ b/search.html
@@ -322,24 +322,24 @@
         <div class="offcanvas-body">
             <h4>Retailer</h4>
             <div class="form-check">
-                <input class="form-check-input no_frills" type="checkbox" value="" id="flexCheckDefault">
-                <label id="save-on-foods" class="form-check-label" for="flexCheckDefault">
+                <input class="form-check-input no_frills" type="checkbox" value="" id="no_frills">
+                <label id="no_frills_label" class="form-check-label" for="no_frills">
                     No Frills
                 </label>
             </div>
             <div class="form-check">
-                <input class="form-check-input save_on_foods" type="checkbox" value="" id="flexCheckDefault">
-                <label id="save-on-foods" class="form-check-label" for="flexCheckDefault">
+                <input class="form-check-input save_on_foods" type="checkbox" value="" id="save-on-foods">
+                <label id="save-on-foods_label" class="form-check-label" for="save-on-foods">
                     Save-On-Foods
                 </label>
             </div>
-            <div id="retailer" class="form-check">
+            <div class="form-check">
                 <input class="form-check-input superstore" type="checkbox" value="" id="superstore">
                 <label id="superstore_label" class="form-check-label" for="superstore">
                     Superstore
                 </label>
             </div>
-            <div id="retailer" class="form-check ml-2">
+            <div class="form-check ml-2">
                 <input class="form-check-input walmart" type="checkbox" value="" id="walmart">
                 <label id="walmart_label" class="form-check-label" for="walmart">
                     Walmart
