--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <p class="lead mb-4 text-white">
                 Save time and money with our easy and simple deal hunting companion.
             </p>
-            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <div class="d-grid gap-2 px-4 d-sm-flex justify-content-sm-center">
                 <button type="button" class="btn btn-success btn-lg px-4 gap-3">
                     Get Started
                 </button>
