Implement Choices Markets retailer filter option

--- a/search.html
+++ b/search.html
@@ -345,6 +345,12 @@
                     Walmart
                 </label>
             </div>
+            <div class="form-check ml-2">
+                <input class="form-check-input choices_markets" type="checkbox" value="">
+                <label id="choices_markets_label" class="form-check-label" for="choices_markets">
+                    Choices Markets
+                </label>
+            </div>
             <!-- <div id="retailer" class="form-check ml-2">
                     <input class="form-check-input whole_foods" type="checkbox" value="" id="whole_foods">
                     <label id="whole_foods_label" class="form-check-label" for="whole_foods">
