--- a/main.html
+++ b/main.html
@@ -35,6 +35,7 @@
 </head>
 
 <body>
+    <!-- Setting the template for the deal cards -->
     <template id="dealCardTemplate">
         <div class="card py-2 mx-2 hovernow mb-4" style="width: 18rem">
             <img class="card-image card-img-top" src=" ..." alt="..." />
@@ -48,6 +49,7 @@
         </div>
     </template>
 
+        <!-- Setting the template for the deal pop up -->
     <div class="overlay" id="overlay"></div>
     <template id="dealPopupTemplate">
         <div class="popup shadow-lg">
@@ -88,12 +90,10 @@
         </div>
     </template>
 
-
-    <!------------------------------>
-    <!-- Your HTML Layout go here -->
+    <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
-            <!-- Brand -->
+            <!-- Brand Logo-->
             <a class="navbar-brand active" href="./main.html">
                 <img src="./images/hound_white.png" height="36" alt="" />
             </a>
@@ -158,6 +158,7 @@
     </nav>
     <!------------------------------>
 
+     <!-- Main page hero-->
     <div class="mb-5 py-5 text-center splash">
         <img class="d-block mx-auto mb-4" src="images/hound_white.png" alt="" width="128" height="128" />
         <h1 class="display-5 text-white fw-bold">DealHound</h1>
@@ -171,6 +172,7 @@
         </div>
     </div>
 
+    <!-- Implement containers for the deals and deal popups -->
     <div class="container mx-auto">
         <div id="deals-popup-here"></div>
     </div>
@@ -181,6 +183,7 @@
 
     <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">Top</button>
 
+    <!-- Fixed footer with nav icons -->
     <footer class="navbar fixed-bottom d-md-none bg-success">
         <div class="container-fluid d-flex justify-content-center">
             <div class="d-flex justify-content-center" id="navbarNavAltMarkup">
