--- a/main.html
+++ b/main.html
@@ -2,35 +2,28 @@
 <html lang="en">
 
 <head>
+    <!-- Document metadata -->
     <title>Deals Hound</title>
     <meta name="Home" content="Deals Hound App" />
-
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Bootstrap Library CSS CDN go here -->
+    <!-- Bootstrap Library CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <!-------------------------------------------------------->
-    <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
-    <!-------------------------------------------------------->
+    <!-- Firebase scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-
-    <!-- Other libraries go here -->
-    <link rel="icon" type="image/x-icon" href="./images/favicon_io/favicon.ico" />
-
-    <!-- Link to styles of your own -->
+    <!-- Styling -->
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon_io/favicon.ico" />
     <link rel="stylesheet" href="styles/style.css" />
 </head>
 
@@ -48,20 +41,22 @@
             </div>
         </div>
     </template>
-
-        <!-- Setting the template for the deal pop up -->
+    <!-- Setting the template for the deal pop up -->
     <div class="overlay" id="overlay"></div>
     <template id="dealPopupTemplate">
         <div class="popup shadow-lg">
             <button type="button" class="btn-close" aria-label="Close"></button>
             <div class="col my-auto">
+                <!-- Item name -->
                 <h2 class="card-item col">Item Title</h2>
+                <!-- Favourite button -->
                 <div class="col my-auto align-content-end">
                     <button type="button" class="bg-white rounded-2 px-12 py-6 fixed-size">
                         <i class="material-icons saveDealButton">favorite_border</i>
                     </button>
                 </div>
             </div>
+            <!-- Deal details -->
             <div class="row flex-row align-items-center my-auto">
                 <div class="col"> <img class="card-image-popup card-img-top" src=" ..." alt="..." /></div>
                 <div class="card-body-template mt-3 mx-auto dealinfo col">
@@ -86,10 +81,10 @@
                     </div>
                 </div>
             </div>
+            <!-- Item description -->
             <p class="card-description px-12">Description</p>
         </div>
     </template>
-
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
@@ -108,10 +103,10 @@
                     </svg>
                 </button>
             </form>
-
             <!-- Collapsible menu-->
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav d-none d-lg-flex">
+                    <!-- Shopping list button -->
                     <li class="nav-item">
                         <a class="nav-link" href="./shoppinglist.html">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -129,6 +124,7 @@
                             Shopping List
                         </a>
                     </li>
+                    <!-- Favourites button -->
                     <li class="nav-item">
                         <a class="nav-link" href="./favourites.html">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -140,6 +136,7 @@
                             Favourites
                         </a>
                     </li>
+                    <!-- Profile Button -->
                     <li class="nav-item">
                         <a class="nav-link" href="profiles.html" role="button">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -156,9 +153,7 @@
             </div>
         </div>
     </nav>
-    <!------------------------------>
-
-     <!-- Main page hero-->
+    <!-- Main page hero-->
     <div class="mb-5 py-5 text-center splash">
         <img class="d-block mx-auto mb-4" src="images/hound_white.png" alt="" width="128" height="128" />
         <h1 class="display-5 text-white fw-bold">DealHound</h1>
@@ -171,7 +166,6 @@
             </div>
         </div>
     </div>
-
     <!-- Implement containers for the deals and deal popups -->
     <div class="container mx-auto">
         <div id="deals-popup-here"></div>
@@ -180,14 +174,13 @@
         <div id="deals-go-here" class="row row-cols-auto  justify-content-center"></div>
     </div>
     <p class="mt-5"></p>
-
     <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">Top</button>
-
     <!-- Fixed footer with nav icons -->
     <footer class="navbar fixed-bottom d-md-none bg-success">
         <div class="container-fluid d-flex justify-content-center">
             <div class="d-flex justify-content-center" id="navbarNavAltMarkup">
                 <div class="d-flex text-white">
+                    <!-- Home button -->
                     <a class="nav-link active d-flex flex-column pe-5 align-items-center" aria-current="page"
                         href="./main.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="45" height="45"
@@ -198,6 +191,7 @@
                         </svg>
                         Home
                     </a>
+                    <!-- Shopping list button -->
                     <a class="nav-link d-flex flex-column align-items-center" href="./shoppinglist.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1.5">
@@ -211,6 +205,7 @@
                         </svg>
                         Shopping List
                     </a>
+                    <!-- Favourites button -->
                     <a class="nav-link d-flex flex-column px-5 align-items-center" href="./favourites.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
@@ -219,6 +214,7 @@
                         </svg>
                         Favourites
                     </a>
+                    <!-- Profile button -->
                     <a class="nav-link d-flex flex-column align-items-center" href="./profiles.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
@@ -232,9 +228,7 @@
         </div>
     </footer>
 
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
+    <!-- DealHound scripts -->
     <script src="./scripts/firebaseAPI_Team05.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
