--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -746,10 +746,10 @@
     <script src="./scripts/authentication.js"></script>
 
     <!-- Firestore logic (subscribe, add, remove) -->
-    <script src="./scripts/firestore.js"></script>
+    <script src="./scripts/shoppingListFirestore.js"></script>
 
     <!-- UI logic (rendering list, hooking up buttons, etc.) -->
-    <script src="./scripts/ui.js"></script>
+    <script src="./scripts/shoppingListUi.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/shoppinglist.js"></script>
