Clean up code in index.html & copy popup template from main.html

--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
             </div>
         </div>
     </template>
-    <!-- Setting the template for the deal pop up -->
+    <!-- Template for deal popups -->
     <div class="overlay" id="overlay"></div>
     <template id="dealPopupTemplate">
         <div class="popup shadow-lg">
@@ -166,10 +166,11 @@
             </div>
         </div>
     </div>
-    <!-- Implement containers for the deals and deal popups -->
+    <!-- Container for deal popups targeted by displayDealPopupsDynamically in main.js -->
     <div class="container mx-auto">
         <div id="deals-popup-here"></div>
     </div>
+    <!-- Container for deal cards targeted by displayCardsDynamically in main.js -->
     <div class="container pb-4">
         <div id="deals-go-here" class="row row-cols-auto  justify-content-center"></div>
     </div>
