--- a/index.html
+++ b/index.html
@@ -2,39 +2,33 @@
 <html lang="en">
 
 <head>
+    <!-- Document metadata -->
     <title>Deals Hound</title>
     <meta name="Home" content="Deals Hound App" />
-
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Bootstrap Library CSS CDN go here -->
+    <!-- Bootstrap Library CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <!-------------------------------------------------------->
-    <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
-    <!-------------------------------------------------------->
+    <!-- Firebase scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-
-    <!-- Other libraries go here -->
-    <link rel="icon" type="image/x-icon" href="./images/favicon_io/favicon.ico" />
-
-    <!-- Link to styles of your own -->
+    <!-- Styling -->
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon_io/favicon.ico" />
     <link rel="stylesheet" href="styles/style.css" />
 </head>
 
 <body>
+    <!-- Template for deal cards -->
     <template id="dealCardTemplate">
         <div class="card py-2 mx-2 hovernow mb-4" style="width: 18rem">
             <img class="card-image card-img-top" src=" ..." alt="..." />
@@ -47,66 +41,63 @@
             </div>
         </div>
     </template>
-
+    <!-- Overlay for deal card popups -->
     <div class="overlay" id="overlay"></div>
+    <!-- Template for deal card popups -->
     <template id="dealPopupTemplate">
         <div class="popup shadow-lg">
             <button type="button" class="btn-close" aria-label="Close"></button>
-            <div class="row my-auto">
-                <h1 class="card-item col">Item Title</h1>
+            <div class="col my-auto">
+                <!-- Item name -->
+                <h2 class="card-item col">Item Title</h2>
+                <!-- Favourite button -->
                 <div class="col my-auto align-content-end">
-                    <!-- <button id="saveItem" type="button" class="bg-white rounded-2"><svg
-                            xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="size-6 " height="35px" weight="35px">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
-                        </svg>
-                    </button> -->
                     <button type="button" class="bg-white rounded-2 px-12 py-6 fixed-size">
                         <i class="material-icons saveDealButton">favorite_border</i>
                     </button>
                 </div>
             </div>
-            <p class="card-description">Description</p>
+            <!-- Deal details -->
             <div class="row flex-row align-items-center my-auto">
                 <div class="col"> <img class="card-image-popup card-img-top" src=" ..." alt="..." /></div>
                 <div class="card-body-template mt-3 mx-auto dealinfo col">
                     <div>
-                        <h4 class="d-inline">Deal: <span class="card-deal"></span></h4>
+                        <h4 class="d-inline"><span class="fw-semibold">Deal: </span><span class="card-deal"></span></h4>
                     </div>
                     <div class="my-2">
-                        <h4 class="d-inline">Price: <span class="card-price"></span>
+                        <h4 class="d-inline"><span class="fw-semibold">Price: </span><span class="card-price"></span>
                         </h4>
                     </div>
                     <div>
-                        <h4 class="d-inline">Brand: </h4><span class="card-brand"></span>
-
+                        <h4 class="d-inline"><span class="fw-semibold">Brand: </span><span class="card-brand"></span>
+                        </h4>
                     </div>
                     <div class="my-2">
                         <h4 class="d-inline"><span class="fw-semibold">Retailer: </span><span
-                                class="card-retailer"></span>
-                        </h4>
+                                class="card-retailer"></span></h4>
                     </div>
                     <div>
                         <h4 class="d-inline"><span class="fw-semibold">End Date: </span><span
-                                class="card-end-date"></span>
-                        </h4>
+                                class="card-end-date"></span></h4>
                     </div>
                 </div>
             </div>
+            <!-- Item description -->
+            <p class="card-description px-12">Description</p>
         </div>
     </template>
-    <!------------------------------>
-    <!-- Your HTML Layout go here -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container-fluid">
             <!-- Brand -->
             <a class="navbar-brand active" href="./main.html">
                 <img src="./images/hound_white.png" height="36" alt="" />
             </a>
+            <!-- Search bar -->
             <form class="d-flex me-auto" role="search">
+                <!-- Search box -->
                 <input id="searchBox" class="form-control me-2" type="text" name="item"
                     placeholder="Search flyers or items" aria-label="Search" />
+                <!-- Search button -->
                 <button id="searchButton" class="btn btn-success-light" type="button">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="white"
                         stroke-linecap="round" stroke-linejoin="round" width="28" height="28" stroke-width="1.5">
@@ -114,6 +105,7 @@
                         <path d="M21 21l-6 -6"></path>
                     </svg>
                 </button>
+                <!-- Sort dropdown -->
                 <div class="dropdown">
                     <button class="btn btn-success-light dropdown-toggle" type="button" id="filterDropdown"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -130,10 +122,10 @@
                     </ul>
                 </div>
             </form>
-
             <!-- Collapsible menu-->
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav d-none d-lg-flex">
+                    <!-- Shopping list button (redirects to login) -->
                     <li class="nav-item">
                         <a class="nav-link" href="./shoppinglist.html">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -151,6 +143,7 @@
                             Shopping List
                         </a>
                     </li>
+                    <!-- Favourites button (redirects to login) -->
                     <li class="nav-item">
                         <a class="nav-link" href="./favourites.html">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -162,6 +155,7 @@
                             Favourites
                         </a>
                     </li>
+                    <!-- Sign in button -->
                     <li class="nav-item">
                         <a class="nav-link" href="login.html" role="button">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
@@ -178,38 +172,36 @@
             </div>
         </div>
     </nav>
-    <!------------------------------>
-
-    <!-- <div class="px-4 py-5 my-5 text-center "
-        style="background-image: url('images/splash2.jpg'); background-size: cover; background-position: center;"> -->
     <div class="mb-5 py-5 text-center splash">
         <img class="d-block mx-auto mb-4" src="images/hound_white.png" alt="" width="128" height="128" />
         <h1 class="display-5 text-white fw-bold">DealHound</h1>
         <div class="col-lg-6 mx-auto">
+            <!-- Hero new user hook -->
             <p class="lead mb-4 text-white">
                 Save time and money with our easy and simple deal hunting companion.
             </p>
+            <!-- Hero new user options buttons -->
             <div class="d-grid gap-2 px-4 d-sm-flex justify-content-sm-center">
                 <button type="button" class="btn btn-success btn-lg px-4 gap-3">
                     Get Started
                 </button>
-
                 <a class="btn btn-light btn-lg px-4" href="./aboutus.html">About Us</a>
             </div>
         </div>
     </div>
-
+    <!-- Container for deal popups targeted by displayDealPopupsDynamically in index.js -->
     <div class="container mx-auto">
         <div id="deals-popup-here"></div>
     </div>
+    <!-- Container for deal cards targeted by displayCardsDynamically in index.js -->
     <div class="container">
         <div id="deals-go-here" class="row row-cols-auto  justify-content-center"></div>
     </div>
-
     <footer class="navbar fixed-bottom d-md-none bg-success">
         <div class="container-fluid d-flex justify-content-center">
             <div class="d-flex justify-content-center" id="navbarNavAltMarkup">
                 <div class="d-flex text-white">
+                    <!-- Home button -->
                     <a class="nav-link active d-flex flex-column pe-5 align-items-center" aria-current="page"
                         href="./main.html"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="45" height="45"
@@ -220,6 +212,7 @@
                         </svg>
                         Home
                     </a>
+                    <!-- Shopping list button -->
                     <a class="nav-link d-flex flex-column align-items-center" href="./shoppinglist.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1.5">
@@ -233,6 +226,7 @@
                         </svg>
                         Shopping List
                     </a>
+                    <!-- Favourites button -->
                     <a class="nav-link d-flex flex-column px-5 align-items-center" href="./favourites.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
@@ -241,6 +235,7 @@
                         </svg>
                         Favourites
                     </a>
+                    <!-- Profile button -->
                     <a class="nav-link d-flex flex-column align-items-center" href="./profiles.html">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-linecap="round" stroke-linejoin="round" width="45" height="45" stroke-width="1">
@@ -254,9 +249,7 @@
         </div>
     </footer>
 
-    <!---------------------------------------------->
-    <!-- Your own JavaScript functions go here    -->
-    <!---------------------------------------------->
+    <!-- DealHound scripts -->
     <script src="./scripts/firebaseAPI_Team05.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script>
